--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 
 <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon Marketing website</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--change accessiblility for various viewports-->
 </head>
 
 <body>
     <section class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <div class="headerband">
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
